src/styles/tailwind.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';
@plugin '@tailwindcss/aspect-ratio';
@config '../../typography.ts';
@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --text-2xs: 0.75rem;
  --text-2xs--line-height: 1.25rem;
  --text-xs: 0.8125rem;
  --text-xs--line-height: 1.5rem;
  --text-sm: 0.875rem;
  --text-sm--line-height: 1.5rem;
  --text-base: 1rem;
  --text-base--line-height: 1.75rem;
  --text-lg: 1.125rem;
  --text-lg--line-height: 1.75rem;
  --text-xl: 1.25rem;
  --text-xl--line-height: 1.75rem;
  --text-2xl: 1.5rem;
  --text-2xl--line-height: 2rem;
  --text-3xl: 1.875rem;
  --text-3xl--line-height: 2.25rem;
  --text-4xl: 2.25rem;
  --text-4xl--line-height: 2.5rem;
  --text-5xl: 3rem;
  --text-5xl--line-height: 1;
  --text-6xl: 3.75rem;
  --text-6xl--line-height: 1;
  --text-7xl: 4.5rem;
  --text-7xl--line-height: 1;
  --text-8xl: 6rem;
  --text-8xl--line-height: 1;
  --text-9xl: 8rem;
  --text-9xl--line-height: 1;

  --shadow-glow: 0 0 4px rgb(0 0 0 / 0.1);

  --container-lg: 33rem;
  --container-2xl: 40rem;
  --container-3xl: 50rem;
  --container-5xl: 66rem;


  --color-timberwolf:     #d6d8d3;
  --color-timberwolf-50:  #fafaf9;
  --color-timberwolf-100: #f7f7f6;
  --color-timberwolf-200: #eff0ee;
  --color-timberwolf-300: #e7e8e5;
  --color-timberwolf-400: #dfe0dc;
  --color-timberwolf-500: #d6d8d3;
  --color-timberwolf-550: #C1C4BD;
  --color-timberwolf-600: #acb0a6;
  --color-timberwolf-700: #828879;
  --color-timberwolf-800: #575b51;
  --color-timberwolf-900: #2b2d28;

  --color-charcoal:     #3B4458;
  --color-charcoal-100: #d4d8e2;
  --color-charcoal-200: #a8b1c5;
  --color-charcoal-300: #7d8aa8;
  --color-charcoal-400: #586684;
  --color-charcoal-460: #404A5F;
  --color-charcoal-500: #3b4458;
  --color-charcoal-600: #2f3747;
  --color-charcoal-700: #232935;
  --color-charcoal-750: #1E222C;
  --color-charcoal-800: #181b23;
  --color-charcoal-850: #12151B;
  --color-charcoal-900: #0c0e12;

  --color-carmine: #9a031e;
  --color-carmine-100: #febac6;
  --color-carmine-200: #fc758e;
  --color-carmine-300: #fb3055;
  --color-carmine-400: #e0052d;
  --color-carmine-500: #9a031e;
  --color-carmine-600: #7c0319;
  --color-carmine-700: #5d0213;
  --color-carmine-800: #3e010c;
  --color-carmine-900: #1f0106;

  --color-gamboge:     #ec9a29;
  --color-gamboge-100: #fbebd4;
  --color-gamboge-200: #f7d7a9;
  --color-gamboge-300: #f4c27e;
  --color-gamboge-400: #f0ae52;
  --color-gamboge-500: #ec9a29;
  --color-gamboge-600: #cb7e12;
  --color-gamboge-700: #985e0d;
  --color-gamboge-800: #653f09;
  --color-gamboge-900: #331f04;
}

@layer base {
  :root {
    --shiki-color-text: var(--color-white);
    --shiki-token-constant: var(--color-emerald-300);
    --shiki-token-string: var(--color-emerald-300);
    --shiki-token-comment: var(--color-zinc-500);
    --shiki-token-keyword: var(--color-sky-300);
    --shiki-token-parameter: var(--color-pink-300);
    --shiki-token-function: var(--color-violet-300);
    --shiki-token-string-expression: var(--color-emerald-300);
    --shiki-token-punctuation: var(--color-zinc-200);
  }

  [inert] ::-webkit-scrollbar {
    display: none;
  }
}

